# Dashboard

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/my_home_ctrl/: BrowseErrorActivity.java  CardPresenter.java  DetailsActivity.java  DetailsDescriptionPresenter.java  ErrorFragment.java  MainActivity.java  MainFragment.java  Movie.java  MovieList.java  PlaybackActivity.java  PlaybackVideoFragment.java  PowerActionRequest.java  RedfishApi.java  RedfishSystem.java  UnsafeOkHttpClient.java  VideoDetailsFragment.java
app/src/main/res/color/: power_button_color.xml
app/src/main/res/drawable/: ic_refresh.xml
app/src/main/res/layout/: activity_main.xml  styles.xml
app/src/main/res/values/: colors.xml
app/src/main/res/xml/: network_security_config.xml
backend/: pyproject.toml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
