[project]
name = "backend"
version = "0.1.0"
description = "Backend code for dashboard"
authors = [
    {name = "Velmurugan-kl",email = "velmuruganabr@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
